# basyx-python-framework

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: add-requirements.txt  docs-requirements.txt
docs/source/: conf.py  index.rst  sdk.rst
docs/source/_static/_static/: custom.css
docs/source/client/: index.rst
docs/source/sdk/: index.rst
docs/source/server/: index.rst
sdk/: README.md  pyproject.toml
sdk/basyx/: __init__.py  object_store.py  objectstore.py
sdk/basyx/adapter/: _generic.py  aasx.py
sdk/basyx/adapter/json/: __init__.py  json_deserialization.py  json_serialization.py
sdk/basyx/adapter/xml/: __init__.py  xml_deserialization.py  xml_serialization.py
sdk/basyx/tutorial/: tutorial_create_simple_aas.py  tutorial_objectstore.py  tutorial_serialization_deserialization.py
sdk/test/: test_objectstore.py
